# cli

./: .codecov.yml  .dockerignore  .env.example  .gitignore  CLAUDE.md  COMMAND_ROUTING.md  DEVELOPMENT.md  DEV_MODE.md  DOCKERFILE_REQUIREMENTS.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  HELP_COMPLETION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.txt  LICENSE  LINUX_TROUBLESHOOTING.md  MANIFEST.in  MSYS2_CRYPTOGRAPHY_FIX.md  NOT_IMPLEMENTED_FEATURES_PLAN.md  QUEUE_TRACE_UPDATE.md  README.md  README_PYPI.md  REDIACC_CLI_COMMAND_ANALYSIS.md  REDIACC_CLI_QUICK_REFERENCE.md  TERMINAL_USAGE.md  TOKEN_CHAINING_EXPLAINED.md  TOKEN_MANAGEMENT_IMPROVEMENTS.md  WARP.md  WINDOWS_TROUBLESHOOTING.md  cli.py  dev.sh  docker-compose.yml  go  go.mod  install.sh  install_msys2_packages.sh  main.go  pyproject.toml  rediacc  (+25 more)
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: auth_connection.md  bug_report.md  config.yml  documentation.md  feature_request.md  file_sync.md  gui_issues.md  installation_setup.md
.github/workflows/: ci.yml  publish-pypi.yml  test-cli.yml
_scripts/: .gitkeep  README.md  apply-default-repo-settings.sh
cli-dashboard/: .gitignore  README.md  index.html  package.json  vite.config.ts
cli-dashboard/src/: App.tsx  index.css
cli-dashboard/src/components/: CommandOutput.tsx  I18nProvider.tsx  LanguageSelector.tsx
cli-dashboard/src/hooks/: useAuth.tsx  useRTL.ts  useWebSocket.tsx
cli-dashboard/src/i18n/: index.ts
cli-dashboard/src/pages/: CommandBuilderPage.tsx  DashboardPage.tsx  HistoryPage.tsx  LoginPage.tsx
cli-dashboard/src/services/: auth.ts
cli-dashboard/src/types/: index.ts
cli-dashboard/src/utils/: commandDefinitions.ts
cmd/: root.go
cmd/auth/: auth.go  user.go
cmd/company/: company.go
cmd/config/: config.go
cmd/infra/: infra.go
cmd/jobs/: jobs.go
cmd/permissions/: permissions.go
cmd/queue/: queue.go
cmd/raw/: raw.go
cmd/schedules/: schedules.go
cmd/storage/: storage.go
cmd/teams/: teams.go
docker/: Dockerfile  Dockerfile.gui  README.md  docker-compose.yml
docs/: API.md  AUTHENTICATION.md  COMMANDS.md  DESKTOP.md  GUI.md  INSTALLATION.md  PROTOCOL_REGISTRATION.md  PYPI_PUBLISHING.md  README.md  SYNC.md  TERMINAL.md
docs/guides/: CONFIGURATION.md  DEVELOPMENT.md  TROUBLESHOOTING.md
examples/: protocol_examples.py
internal/api/: client.go
internal/config/: config.go
internal/format/: formatter.go  json.go  table.go  text.go  yaml.go
internal/models/: auth.go  common.go
internal/utils/: errors.go  validation.go
scripts/: build-docker.sh  build-pypi.py  build.sh  ci-test-runner.sh  generate-release-notes.sh  install.sh  install_msys2_packages.sh  publish.sh  test.sh
src/cli/: __init__.py  __main__.py  _setup_cmds.py  _version.py  api_client.py  config_loader.py  config_path.py  core.py  env_config.py  gui_base.py  gui_file_browser.py  gui_login.py  gui_utilities.py  logging_config.py  rediacc-cli  rediacc-cli-plugin  rediacc-cli-plugin.py  rediacc-cli-sync  rediacc-cli-sync.py  rediacc-cli-term  rediacc-cli-term.py  rediacc-cli.py  rediacc-gui-tk.py  rediacc-gui.py  rediacc_cli_core.py  rediacc_cli_gui.py  setup_hooks.py  subprocess_runner.py  token_manager.py  workflow.py
src/cli/assets/: __init__.py
src/cli/commands/: auth_main.py  cli.py  cli_main.py  compose_main.py  doctor_main.py  license_main.py  plugin.py  plugin_main.py  protocol_main.py  queue_main.py  sync.py  sync_main.py  term.py  term_main.py  user_main.py  vault_builder.py  vault_main.py  vscode_main.py  workflow.py  workflow_main.py
src/cli/config/: __init__.py  cli-config.json  rediacc-term-config.json
src/cli/core/: api_client.py  config.py  env_bootstrap.py  env_config.py  format_help.py  (+10 more)
src/config/: cli-config.json  rediacc-cli.json  rediacc-gui-config.json  rediacc-gui-translations.json  rediacc-term-config.json  rediacc.json
src/modules/: __init__.py  api_mutex.py  config_loader.py  i18n.py  rediacc_cli_core.py  rediacc_cli_gui.py  rediacc_cli_gui_simple.py  subprocess_runner.py  terminal_detector.py  token_manager.py
tests/: BACKEND_CONFIG_NOTES.md  CLAUDE.md  INTEGRATION_TESTING.md  README.md  TEST_UPDATES_SUMMARY.md  TEST_UPDATE_SUMMARY.md  conftest.py  debug-test.sh  demo-repo-creation.sh  migrate_tests.py  rediacc_api_client.py  run-all-tests.sh  run_integration_ci.sh  run_tests.py  run_tests_fast.py  test-cli-simple.sh  test-cli.sh  test-common.sh  test-core.sh  test-dev-mode.sh  test-full-api.sh  test-integration.sh  test-quick.sh  test-simple.sh  test-sync.sh  test-term-demo.sh  test-term-simple.sh  test-term.sh  test-token-management.sh  test_pypi_installation_detection.py  totp_helper.py  transform_yaml_to_endpoints.py  verify-setup.sh
tests/gui/: __init__.py  run_gui_tests.py  test_gui_login_basic.py  test_gui_login_pytest.py  test_helpers.py  test_terminal_imports.py
tests/integration/: cli_test_framework.sh  run_tests.sh  test_auth.sh  test_auth_validation.sh  test_company.sh  test_config.sh  test_error_handling.sh  test_permissions.sh  test_teams.sh
tests/protocol/: __init__.py  protocol_test_server.py  test_protocol_cross_platform.py  test_protocol_page.html  test_protocol_page_dynamic.html  test_protocol_parser.py  test_protocol_playwright.py  test_protocol_registration.py  test_protocol_security.py
tests/test_results/: .gitkeep
tests/utils/: __init__.py  screenshot_helper.py
tests/workflow/: run_workflow_tests.sh  test_workflow_hello.py
tests/yaml/: README.md  TEST_STRUCTURE_GUIDE.md  TEST_SUMMARY.md  config.yaml
tests_ex/: FINAL_TEST_UPDATE_SUMMARY.md  README.md  cleanup-old-tests.sh  test-api.sh  test-cli-simple.sh  test-cli.sh  test-core.sh  test-simple.sh  test-sync.sh  test-term.sh
tests_yaml/: .env.example  ARCHITECTURE.md  CLAUDE.md  README.md  __init__.py  run.py  run_parallel_tests.sh  setup_test_company.py  setup_test_user.py
tests_yaml/docs/: WRITING_TESTS.md
tests_yaml/framework/: REFACTORING.md  __init__.py  base.py  cli_wrapper.py  entities.py  fixtures.py  generators.py  loader.py  mock_config.json  mock_handler.py  runner.py
(+98 files in other folders)
